[package]
name = "bevy-2024-01-02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
rand = "0.8.5"

# Enable a small amout of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy) but not for out code:
[profile.dev.package."*"]
opt-level = 3
